--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,7 @@
-http://34.130.6.95 {
+www.iframe.world {
+    redir https://iframe.world{uri} permanent
+}
+
+iframe.world {
     reverse_proxy localhost:8000
 }
